# doc-search

./: README.md
src/: data_types.py  pyproject.toml
src/embedding/: embedder.py  text_transformer.py
src/file/: file_builder.py  file_reader.py
src/protocols/: embeddings.py  file.py  search.py
